--- a/package.json
+++ b/package.json
@@ -9,16 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@firebase/app": "^0.10.17",
-    "@firebase/auth": "^1.8.1",
-    "@firebase/firestore": "^4.7.5",
-    "@nextui-org/react": "^2.6.8",
-    "@types/react": "^19.0.2",
-    "next": "15.1.2",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.5.5"
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^6.1.1",
+    "@nextui-org/react": "^2.4.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "axios": "^1.7.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-class-names": "^8.1.1",
+    "embla-carousel-react": "^8.0.4",
+    "firebase": "^10.14.1",
+    "framer-motion": "^11.2.4",
+    "lucide-react": "^0.378.0",
+    "next": "^14.2.10",
+    "next-themes": "^0.3.0",
+    "radix-ui": "^1.0.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.54.2",
+    "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -28,6 +50,7 @@
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "4.6.4",
+    "cmdk": "^1.0.4"
   }
 }
