--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "conps": "file:",
     "embla-carousel-class-names": "^8.1.1",
     "embla-carousel-react": "^8.0.4",
     "firebase": "^10.14.1",
+    "firebase-admin": "^13.0.2",
     "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
     "next": "^14.2.10",
@@ -40,17 +42,18 @@
     "tailwind-merge": "^2.5.5",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsc": "^2.0.4",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.17.16",
     "@types/react-dom": "^19.0.2",
+    "cmdk": "^1.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "4.6.4",
-    "cmdk": "^1.0.4"
+    "typescript": "^4.9.5"
   }
 }
